<resources>
    <string name="app_name">Afeme</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or">Or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="don_t_have_an_account_sign_up"><font color='#949AA1'>Don\'t have an account?</font><font color='#2972FE'>  Sign up</font></string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email">Email</string>
    <string name="email_important">Email<font color='#DA1414'>*</font></string>
    <string name="password_important">Password<font color='#DA1414'>*</font></string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="already_have_an_account_sign_in"><font color='#949AA1'>Already have an account?</font><font color='#2972FE'>  Sign in</font></string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="next">Next</string>
    <string name="text">Text</string>
    <string name="skip">Skip</string>
    <string name="onboarding_first_page">The Biggest Real Estate App of the Century</string>
    <string name="onboarding_second_page">We Focus on Providing a Comfortable Place for You</string>
    <string name="onboarding_third_page">Find your Beloved Family\'s Dream House with us</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="house">House</string>
    <string name="popular">Popular</string>
    <string name="view_all">View all</string>
    <string name="nearby_your_location">Nearby your location</string>
    <string name="dummy_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec posuere rhoncus aliquam. Vivamus luctus velit rhoncus felis rhoncus, a convallis diam sollicitudin. Donec vitae magna varius, congue ante quis, semper dui. Integer lectus sapien, convallis a purus ac, aliquet posuere lacus. Nam sed mauris at sapien convallis venenatis. Nullam at gravida dolor. Fusce scelerisque, ante finibus faucibus dictum, sem erat dignissim mi, vel tincidunt ante nisi ac magna. Pellentesque vestibulum placerat sapien, eu fringilla mi sodales ac. Fusce mi diam, volutpat sit amet faucibus quis, suscipit ut urna. Maecenas lacinia eleifend leo, sit amet mollis diam vestibulum vehicula. Suspendisse ullamcorper, arcu tempus ullamcorper luctus, sapien lectus tempor sem, eget mattis ipsum est in erat. In ut finibus nisi. Aliquam at tincidunt elit. Integer bibendum laoreet diam sed aliquam. Suspendisse gravida malesuada urna, vehicula sodales massa vestibulum non.
        Donec vitae porta risus. Vestibulum imperdiet erat ut dui tempus eleifend. Vestibulum tempor sagittis odio, laoreet consectetur mi eleifend nec. Ut pellentesque blandit sem. Proin commodo tincidunt risus a rutrum. Etiam eu mi vitae nunc volutpat feugiat. Pellentesque non consequat tellus, vitae blandit neque. Suspendisse potenti. Mauris consectetur viverra dui vel faucibus. Integer in mauris id neque blandit semper.
        Nulla in sapien neque. In maximus justo vel felis convallis condimentum. Mauris eu urna id massa venenatis sagittis. Nulla convallis magna quis scelerisque aliquet. Quisque vitae lacus quis justo convallis blandit vitae non risus. Integer quis malesuada mauris. Vestibulum vestibulum tortor at dui vehicula lacinia. Nunc tempor lobortis aliquet. Sed lacinia, enim quis auctor bibendum, justo lectus consectetur mi, ut posuere velit sapien sit amet libero. Aenean facilisis nisl et orci fermentum, vel placerat tortor lacinia. Sed congue ante est. Fusce eget magna et erat aliquam congue. Nunc eget neque vitae enim dapibus dictum sed vitae erat. In efficitur, massa rutrum convallis consequat, felis justo sodales augue, et accumsan nibh nulla sed velit. Sed id arcu et nunc mollis ullamcorper.
        Mauris posuere sem eu nulla blandit, id malesuada velit volutpat. Mauris a vulputate elit. Morbi pharetra tortor quis odio cursus, quis dictum odio sagittis. Vestibulum viverra tempus nibh vel luctus. Sed metus ex, dapibus vulputate tellus vel, aliquet efficitur justo. Curabitur scelerisque urna vitae dignissim ornare. Donec congue dolor et magna ultricies, porta laoreet turpis imperdiet. Suspendisse eu dolor sollicitudin, convallis lorem vel, rhoncus libero. Sed a vestibulum ex. Curabitur vestibulum ipsum purus, nec fermentum ipsum vehicula sed. Mauris quis pellentesque ligula. Sed et turpis ac est tempor bibendum sit amet et tellus. Nunc laoreet egestas arcu ut rhoncus. Fusce et congue sem.
        Quisque lobortis mollis venenatis. Quisque eu pulvinar nulla. Morbi urna libero, elementum ac viverra a, finibus id libero. Mauris ut sapien tempor, tincidunt urna eget, varius elit. Pellentesque non aliquet mauris. Mauris non velit interdum quam mattis venenatis vel at sem. Nam sit amet suscipit ipsum, et egestas erat. Quisque a congue sem. Duis imperdiet massa vitae ornare efficitur. Sed tincidunt mattis mi non sodales. Vestibulum eu risus lacinia, laoreet ante in, molestie est. Fusce congue, erat sit amet congue molestie, erat ligula fermentum velit, ac bibendum lacus mauris sit amet metus. Donec lobortis consequat ultrices. Vestibulum mi nibh, vehicula vel ex eu, mollis porttitor mauris. Aenean in iaculis justo, eget ultricies elit. Nunc sit amet scelerisque ligula.
        In facilisis porttitor odio a volutpat. Maecenas malesuada sapien feugiat elit commodo egestas. Nam quis congue nulla. Quisque augue libero, bibendum id ex nec, ornare tincidunt purus. Curabitur varius lorem vel ante viverra, in pulvinar ante rutrum. Mauris nec hendrerit sapien. Duis a pretium justo, vel feugiat risus.
        Vivamus consequat vulputate nunc nec cursus. Curabitur eget gravida enim, nec efficitur leo. Suspendisse potenti. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut eget est vitae purus volutpat ultricies. Vestibulum vel vulputate felis, id tempus dolor. Nunc sit amet lorem magna. In rhoncus augue at nulla vestibulum, eu malesuada purus interdum.
        Nulla et ipsum dapibus, bibendum purus vitae, vulputate arcu. Aenean cursus ut nisi pharetra placerat. Mauris ultrices sodales ante. Donec aliquet finibus neque. Nulla eget vulputate nulla. Aliquam congue est enim, in accumsan libero aliquam ac. Sed vestibulum, ipsum vitae feugiat consectetur, ex neque scelerisque eros, id facilisis lacus felis id tellus. Pellentesque dignissim, ex et faucibus porttitor, nibh arcu porttitor est, non consequat diam felis vel dui. Curabitur libero ante, rhoncus quis pulvinar nec, commodo sit amet tortor. Integer maximus turpis finibus quam eleifend eleifend. Fusce quis odio pellentesque, lacinia urna quis, consectetur sem.
        Nulla auctor, augue at pretium pharetra, risus dui porttitor urna, eu hendrerit libero dolor a quam. Curabitur tempus euismod enim rutrum tincidunt. Nunc mollis consequat leo, vel interdum ligula laoreet nec. Vivamus orci lorem, maximus ac blandit vel, bibendum pulvinar velit. Vestibulum id tortor eget ex luctus interdum mattis a elit. Nulla nunc nunc, gravida luctus diam sed, ultrices consequat elit. Donec vel placerat augue. Pellentesque vel purus tincidunt, feugiat lorem sed, mattis tellus. Praesent tortor quam, vulputate ac arcu non, volutpat consectetur urna. Morbi vehicula lorem neque, sit amet dignissim leo lacinia eget.
        Phasellus a turpis nisl. Pellentesque id rhoncus ex. Donec eleifend commodo dui, a dapibus erat consectetur ac. Proin dapibus feugiat enim ultrices finibus. Pellentesque et mauris tellus. Duis finibus nisl nunc, non pellentesque tortor commodo quis. Morbi dapibus ex in lorem sagittis iaculis vitae sit amet odio. Nunc tempor massa erat, ut hendrerit neque malesuada non. Aenean viverra tristique pretium. Duis eleifend neque vitae leo porta vehicula finibus et ipsum. Pellentesque at magna orci. Sed vitae urna vel sem mollis dignissim ac eu erat. Maecenas vehicula metus gravida mattis pharetra. Duis egestas neque mollis tempor viverra.
        In pulvinar odio nisi, eget semper leo lacinia vel. Etiam rhoncus est eu nunc posuere bibendum. Donec laoreet diam mi, ac sollicitudin tortor dapibus vitae. Curabitur viverra, augue sollicitudin fringilla volutpat, est sem fermentum mauris, euismod scelerisque enim lorem ac massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus porttitor id sapien at facilisis. Mauris porta ante a sollicitudin eleifend. In hac habitasse platea dictumst. Praesent semper tempor tortor sit amet ornare. Nam eu ligula et diam ultricies tincidunt vel tincidunt nisi. Pellentesque auctor, augue eget ornare convallis, justo dui bibendum massa, eget euismod nibh urna eu justo. Nullam nisl mi, interdum sit amet tempus a, faucibus a elit. Nullam bibendum sem quis odio ornare ultrices.
    </string>
    <string name="username">Username</string>
    <string name="gallery">Gallery</string>
    <string name="search">Search</string>
    <string name="api_key">AIzaSyAUpTMk6vOvObIHvXKG9WBfwpPnYOqpQuA</string>
    <string name="location">Location</string>
    <string name="features_amp_facilities"><![CDATA[Features & Facilities]]></string>
    <string name="status">Status</string>
    <string name="area">Area</string>
    <string name="year_build">Year build</string>
    <string name="floor">Floor</string>
    <string name="area_amp_lot"><![CDATA[Area & Lot]]></string>
    <string name="interior">Interior</string>
    <string name="price">Price</string>
    <string name="buy">Buy</string>
    <string name="notification">Notification</string>
    <string name="send_sms">Send SMS</string>
    <string name="to_call">To call</string>
    <string name="enter_the_confirmation_code_we_send_to">Enter the confirmation code we send to</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="resend_sms">resend SMS</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="account_type">Account type</string>
    <string name="phone_number">Phone number</string>
    <string name="_998">+998</string>
    <string name="total_area">Total area</string>
    <string name="apartment_area">Apartment area</string>
    <string name="living_space">Living space</string>
    <string name="kitchen_area">Kitchen area</string>
    <string name="photos">Photos</string>
    <string name="take_a_picture_of_all_the_rooms_the_kitchen_the_bathroom_the_corridor_the_balcony_the_view_from_the_window_the_facade_of_the_building_the_entrance_don_t_use_screenshots">Take a picture of all the rooms, kitchen, bathroom, corridor, balcony, view from the window, facade of the building, entrance. Don\'t use screenshots.</string>
    <string name="maximum_15_photos">Maximum 15 photos</string>
    <string name="apartment_floor">Apartment floor</string>
    <string name="floors_in_the_house">Floors in the house</string>
    <string name="continue_filling">Continue filling</string>
    <string name="start_again">Start again</string>
    <string name="creating_post">Creating post</string>
    <string name="you_started_filling_out_post_but_were_interrupted_do_you_want_to_continue">You started filling out post, but were interrupted. Do you want to continue?</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="add_cover">Add cover</string>
    <string name="edit_public_profile">Edit public profile</string>
    <string name="copy_profile_link">Copy profile link</string>
</resources>