<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bs_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/item_bottom_sheet_background"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingBottom="20dp">

    <View
        android:id="@+id/top_closer"
        android:layout_width="200dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:background="@drawable/item_bottom_sheet_top_closer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:paddingVertical="5dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_add_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:paddingVertical="5dp"
        android:text="@string/add_cover"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_edit_public_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:paddingVertical="5dp"
        android:text="@string/edit_public_profile"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_copy_profile_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:paddingVertical="5dp"
        android:text="@string/copy_profile_link"
        android:textColor="@color/black"
        android:textSize="20sp" />


</LinearLayout>
