<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent"
    tools:context=".fragment.creatpost.AreaFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/apartment_area"
        android:textAlignment="center"
        android:textColor="@color/very_dark_blue_black"
        android:textSize="24sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_total_area"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconTint="@color/black"
        app:endIconDrawable="@drawable/ic_square_metr"
        app:boxStrokeColor="@color/bright_blue"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/total_area"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_living_space"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconTint="@color/black"
        app:endIconDrawable="@drawable/ic_square_metr"
        app:boxStrokeColor="@color/bright_blue"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/living_space"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_kitchen_area"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconTint="@color/black"
        app:endIconDrawable="@drawable/ic_square_metr"
        app:boxStrokeColor="@color/bright_blue"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/kitchen_area"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>