<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".activity.authentication.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/source_sans_pro_regular"
                android:text="@string/account_type"
                android:textColor="@color/very_dark_blue_black"
                android:textSize="18sp" />

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/spinner_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bright_blue_stroke_box"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/very_dark_blue_black"
                android:textColorHint="@color/very_dark_blue_black"
                android:textSize="14.5sp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="8dp"
                app:spinner_divider_color="@color/dark_grayish_blue"
                app:spinner_divider_show="true"
                app:spinner_divider_size="0.4dp"
                app:spinner_item_array="@array/account_types"
                app:spinner_item_height="46dp"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_background="@color/white"
                app:spinner_popup_elevation="14dp" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bright_blue_stroke_box"
                android:padding="8dp"
                app:ccp_defaultNameCode="uz"
                app:ccp_showArrow="true"
                app:ccp_showFlag="false"
                app:ccp_showFullName="true"
                app:ccp_textSize="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_number_signup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                app:boxStrokeColor="@color/bright_blue">

                <EditText
                    android:id="@+id/et_number_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:text="@string/_998" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button

                android:id="@+id/btn_sigup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_button_selector"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:backgroundTint="@null" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@color/very_dark_blue_black"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>